<resources>
    <!-- Application info -->
    <string name="app_name">PaperViewer</string>
    <string name="description">Making papers finally readable on your smartphone.</string>

    <!-- Action bar menu items -->
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="images">Images</string>
    <string name="nav_left">Section to the left</string>
    <string name="nav_right">Section to the right</string>

    <!-- NavigationView items & default strings -->
    <string name="table_of_contents">Table of contents</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Scrolling behavior -->
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="gallery_item">Gallery item</string>
    <string name="abstract_header">Abstract</string>

    <!-- Strings for dialogbox that redirects to Aurora -->
    <string name="dialog_title">Oh nooooooo</string>
    <string name="dialog_message">Your Paper has expired.\nYou can find more recent papers in Aurora.</string>
    <string name="ok">OK</string>

    <!-- Header content for the abstract -->
    <string name="abstract_header_content">Abstract</string>

    <!-- Font properties for the section and abstract content in the webview,
         section fonts are controlled by the settings -->
    <string name="abstract_font_family">Times New Roman, serif</string>
    <string name="abstract_font_weight">bold</string>
    <string name="abstract_text_align">left</string>
    <string name="section_font_weight">normal</string>
    <string name="section_text_align">justify</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Settings activity -->
    <!-- The font preferences -->
    <string name="font">Font</string>
    <string name="font_size">Font size</string>
    <string name="font_size_summary">Pick a font size.</string>
    <string name="font_family">Font family</string>
    <string name="font_family_summary">Click to show a list to choose from.</string>
    <!-- This should be a font family from the font_family list in the arrays.xml resource file -->
    <string name="default_font_family">Arial</string>
    <!-- The image toggle preferences -->
    <string name="image">Images in text</string>
    <string name="image_summary">Toggle to disable/enable images in text. \nWhen disabled, images are still accessible from within the gallery. </string>
    <string name="default_image_toggle">true</string>

    <!-- Abstract and section navigation descriptions -->
    <string name="btn_abstract_nav_top_description">Navigate to the top of the abstract</string>
    <string name="btn_abstract_nav_right_description">Navigate to the sections</string>
    <string name="btn_section_nav_left_description">Navigate to the previous section</string>
    <string name="btn_section_nav_right_description">Navigate to the next section</string>
    <string name="btn_section_nav_top_description">Navigate to the top of this section page</string>
</resources>
