<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <PreferenceCategory android:title="@string/font">
        <com.aurora.paperviewerenvironment.NumberPickerPreference
            android:key="fontSize"
            android:title="@string/font_size"
            android:summary="@string/font_size_summary"
            android:defaultValue="@integer/default_section_font_size"/>

        <ListPreference
            android:dialogTitle="@string/font_family"
            android:entries="@array/font_family"
            android:entryValues="@array/font_family"
            android:key="fontFamily"
            android:summary="@string/font_family_summary"
            android:title="@string/font_family"
            android:defaultValue="@string/default_font_family"/>
    </PreferenceCategory>
</PreferenceScreen>
