<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="vertical"
    android:orientation="vertical"
    android:id="@+id/section_scrollview">

    <android.support.constraint.ConstraintLayout
        android:clipToPadding="false"
        android:layout_gravity="start|top"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/constraintLayout_section">

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/section_header"
            app:layout_constraintVertical_bias="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/section_header_horizontal_margin"
            android:layout_marginEnd="@dimen/section_header_horizontal_margin"
            android:layout_marginTop="@dimen/section_header_vertical_margin"
            android:layout_marginBottom="@dimen/section_header_vertical_margin"
            android:gravity="start|top"
            android:textAppearance="@style/SectionHeader"
            app:layout_constraintBottom_toTopOf="@+id/section_webview"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintTop_creator="1">
        </LinearLayout>

        <WebView
            android:id="@+id/section_webview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/section_content_horizontal_margin"
            android:layout_marginTop="@dimen/section_content_vertical_margin"
            android:layout_marginEnd="@dimen/section_content_horizontal_margin"
            android:layout_marginBottom="@dimen/section_content_vertical_margin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/section_header"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintTop_creator="1"
            android:scrollbars="none"
            android:overScrollMode="never"/>

        <ImageButton
            android:id="@+id/btn_section_nav_left"
            android:layout_width="@dimen/button_nav_size"
            android:layout_height="@dimen/button_nav_size"
            android:layout_gravity="start|bottom"
            android:layout_marginBottom="8dp"
            android:background="@drawable/ic_nav_left"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/section_webview"
            app:layout_constraintVertical_bias="1"
            android:contentDescription="@string/btn_section_nav_left_description"/>

        <ImageButton
            android:id="@+id/btn_section_nav_top"
            android:layout_width="@dimen/button_nav_size"
            android:layout_height="@dimen/button_nav_size"
            android:layout_marginBottom="8dp"
            android:background="@drawable/ic_nav_top"
            android:gravity="center|bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_section_nav_right"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_section_nav_left"
            app:layout_constraintTop_toBottomOf="@+id/section_webview"
            app:layout_constraintVertical_bias="1"
            android:contentDescription="@string/btn_section_nav_top_description"/>

        <ImageButton
            android:id="@+id/btn_section_nav_right"
            android:layout_width="@dimen/button_nav_size"
            android:layout_height="@dimen/button_nav_size"
            android:layout_marginBottom="8dp"
            android:background="@drawable/ic_nav_right"
            android:gravity="end|bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="1"
            app:layout_constraintTop_toBottomOf="@+id/section_webview"
            android:contentDescription="@string/btn_section_nav_right_description"/>

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>